# architecture-hexagonal

./: README.md  pyproject.toml  pytest.ini  requirements.txt  vercel.json
src/core/client/domain/: entity_client.py
src/core/client/ports/output/: repository.py
src/core/jogo/domain/: entity_jogo.py  entity_jogo_plataforma.py
src/core/locacao/domain/: entity_locacao.py
src/core/locacao/domain/item_locacao/: entity_item_locacao.py
src/core/locacao/domain/locacao/: entity_locacao.py
src/core/locacao/ports/input/: adicionar_jogo_service.py  calcular_custo_total.py  criar_locacao_service.py  locacao_service.py
src/core/locacao/ports/output/: locacao_repositoy.py
src/core/plataforma/domain/: entity_plataforma.py
src/framework/: settings.py  urls.py  wsgi.py
src/framework/cliente/: apps.py  models.py
src/framework/cliente/adapters/output/: cliente_repository.py
src/framework/cliente/migrations/: 0001_initial.py
src/framework/jogo/: admin.py  apps.py  models.py
src/framework/jogo/migrations/: 0001_initial.py
src/framework/locacao/: admin.py  apps.py  models.py
src/framework/locacao/adapters/input/: add_item_view.py  controller.py  create_locaco_view.py  custo_total_view.py  serializers.py  views.py
src/framework/locacao/adapters/output/: repository.py
src/framework/locacao/migrations/: 0001_initial.py  0002_alter_itemlocacao_locacao.py  0003_itemlocacao_cliente.py  0004_remove_itemlocacao_cliente_locacao_cliente.py
src/framework/locacao/tests/: test_repository.py  test_view.py
src/framework/locacao/tests/adapters/input/: test_view.py
src/framework/plataforma/: admin.py  apps.py  models.py
src/framework/plataforma/migrations/: 0001_initial.py
(+1 files in other folders)
